force-app/main/default/objects/sugati__Tour_Enquiry_Form__c/sugati__Tour_Enquiry_Form__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Tour Enquiry Form Setting</label>
</CustomObject>