force-app/main/default/objects/sugati__Tour_Enquiry_Form__c/fields/sugati__Color_Background_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>sugati__Color_Background_Total_Price__c</fullName>
    <defaultValue>&quot;#EC9740&quot;</defaultValue>
    <label>Color.Background Total Price</label>
    <length>20</length>
    <type>Text</type>
</CustomField>