force-app/main/default/objects/sugati__Tour_Enquiry_Form__c/fields/sugati__Colour_Background__c.field-meta.xml
<CustomField>
    <fullName>sugati__Colour_Background__c</fullName>
    <defaultValue>&quot;#f5e6d7&quot;</defaultValue>
    <label>Colour.Background</label>
    <length>20</length>
    <type>Text</type>
</CustomField>