force-app/main/default/objects/sugati__Tour_Enquiry_Form__c/fields/sugati__Colour_Main__c.field-meta.xml
<CustomField>
    <fullName>sugati__Colour_Main__c</fullName>
    <defaultValue>&quot;#EC9740&quot;</defaultValue>
    <label>Colour.Main</label>
    <length>20</length>
    <type>Text</type>
</CustomField>