force-app/main/default/objects/sugati__Tour_Enquiry_Form__c/fields/sugati__Colour_Text__c.field-meta.xml
<CustomField>
    <fullName>sugati__Colour_Text__c</fullName>
    <defaultValue>&quot;grey&quot;</defaultValue>
    <label>Colour.Text</label>
    <length>20</length>
    <type>Text</type>
</CustomField>