force-app/main/default/objects/sugati__Tour_Enquiry_Form__c/fields/sugati__Colour_Text_in_Buttons__c.field-meta.xml
<CustomField>
    <fullName>sugati__Colour_Text_in_Buttons__c</fullName>
    <inlineHelpText>This colour text will be used where the text sits on top of the primary / secondary colour</inlineHelpText>
    <label>Colour.Text on colour</label>
    <length>20</length>
    <type>Text</type>
</CustomField>