force-app/main/default/objects/sugati__Tour_Enquiry_Form__c/fields/sugati__Default_Gender__c.field-meta.xml
<CustomField>
    <fullName>sugati__Default_Gender__c</fullName>
    <inlineHelpText>Set Default Gender for Contact.</inlineHelpText>
    <label>Default Gender</label>
    <length>20</length>
    <type>Text</type>
</CustomField>