force-app/main/default/objects/sugati__Tour_Enquiry_Form__c/fields/sugati__Display_Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>sugati__Display_Additional_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Additional Information</label>
    <type>Checkbox</type>
</CustomField>