force-app/main/default/objects/sugati__Tour_Enquiry_Form__c/fields/sugati__Header_Home_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__Header_Home_Page_URL__c</fullName>
    <label>Header Home Page URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>