force-app/main/default/objects/sugati__Tour_Enquiry_Form__c/fields/sugati__Heading_Title__c.field-meta.xml
<CustomField>
    <fullName>sugati__Heading_Title__c</fullName>
    <defaultValue>&quot;SAVE YOUR SPACE TODAY!&quot;</defaultValue>
    <label>Heading Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>