force-app/main/default/objects/sugati__Tour_Enquiry_Form__c/fields/sugati__Not_Available_Message__c.field-meta.xml
<CustomField>
    <fullName>sugati__Not_Available_Message__c</fullName>
    <defaultValue>&apos;Sorry, Tour is no longer available!&apos;</defaultValue>
    <inlineHelpText>Once the return date of a tour has passed, then the onboarding form will no longer be available, enter the message you would like to display to anyone returning to their page after the trip has completed.</inlineHelpText>
    <label>Not Available Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>