force-app/main/default/objects/sugati__Tour_Enquiry_Form__c/fields/sugati__Secondary_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__Secondary_Color__c</fullName>
    <label>Secondary Color</label>
    <length>50</length>
    <type>Text</type>
</CustomField>