force-app/main/default/objects/sugati__Tour_Enquiry_Form__c/fields/sugati__Success_Redirect_URL__c.field-meta.xml
<CustomField>
    <fullName>sugati__Success_Redirect_URL__c</fullName>
    <defaultValue>&quot;https://sugatitravel.com&quot;</defaultValue>
    <label>Success Redirect URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>